# avx2_test

./: CMakeLists.txt  README.md  convertScale.cpp  convertScale.hpp  main.cpp  normHamming.cpp  normHamming.hpp
